fix: use Map for tags for AWS secrets manager and kms (#1055)
* Use Map for tags for AWS secrets manager and kms
* fix CmdLineParamsConfigFileImpl tags creation in dsl
* Use split regexp with tags Map option
* Fix Yaml Config File Parser to apply map values
* remove aws kms tag tests which are not relavant
* Update Aws KMS Acceptance Test.
* Fix DSL yaml config file generation to use YAML ObjectMapper instead of manual file creation
* Fix cmdline config file impl dsl
* Add changelog
* Removing tests which are not valid
* code cleanup