@@ -155,11 +155,7 @@ class AwsSecretsManagerTest {
   @Test
   void emptyFiltersReturnAllSecrets() {
     final MappedResults<SimpleEntry<String, String>> mappedResults =
-        awsSecretsManagerExplicit.mapSecrets(
-            Collections.emptyList(),
-            Collections.emptyList(),
-            Collections.emptyList(),
-            SimpleEntry::new);
+        awsSecretsManagerExplicit.mapSecrets(Collections.emptyList(), Map.of(), SimpleEntry::new);
 
     final Set<String> fetchedKeys =
         mappedResults.getValues().stream().map(SimpleEntry::getKey).collect(Collectors.toSet());
@@ -172,8 +168,7 @@ class AwsSecretsManagerTest {
     MappedResults<SimpleEntry<String, String>> mappedResults =
         awsSecretsManagerExplicit.mapSecrets(
             Collections.emptyList(),
-            List.of("nonexistent-tag-key"),
-            List.of("nonexistent-tag-value"),
+            Map.of("nonexistent-tag-key", "nonexistent-tag-value"),
             SimpleEntry::new);
 
     Assertions.assertThat(mappedResults.getValues()).isEmpty();
@@ -183,10 +178,7 @@ class AwsSecretsManagerTest {
   void nonExistentPrefixFilterReturnsEmpty() {
     final MappedResults<SimpleEntry<String, String>> mappedResults =
         awsSecretsManagerExplicit.mapSecrets(
-            List.of("nonexistent-secret-prefix"),
-            Collections.emptyList(),
-            Collections.emptyList(),
-            SimpleEntry::new);
+            List.of("nonexistent-secret-prefix"), Map.of(), SimpleEntry::new);
 
     Assertions.assertThat(mappedResults.getValues()).isEmpty();
   }
@@ -195,10 +187,7 @@ class AwsSecretsManagerTest {
   void nonExistentPrefixFilterWithTagFilterReturnsEmpty() {
     final MappedResults<SimpleEntry<String, String>> mappedResults =
         awsSecretsManagerExplicit.mapSecrets(
-            List.of("nonexistent-secret-prefix"),
-            List.of("tagKey1"),
-            Collections.emptyList(),
-            SimpleEntry::new);
+            List.of("nonexistent-secret-prefix"), Map.of("tagKey1", ""), SimpleEntry::new);
 
     Assertions.assertThat(mappedResults.getValues()).isEmpty();
   }
@@ -207,10 +196,7 @@ class AwsSecretsManagerTest {
   void listAndMapSecretsWithPrefix() {
     MappedResults<SimpleEntry<String, String>> mappedResults =
         awsSecretsManagerExplicit.mapSecrets(
-            List.of(SECRET_NAME_PREFIX_A),
-            Collections.emptyList(),
-            Collections.emptyList(),
-            SimpleEntry::new);
+            List.of(SECRET_NAME_PREFIX_A), Map.of(), SimpleEntry::new);
 
     final Set<String> fetchedKeys =
         mappedResults.getValues().stream().map(SimpleEntry::getKey).collect(Collectors.toSet());
@@ -224,10 +210,7 @@ class AwsSecretsManagerTest {
   void listAndMapSecretsWithPrefixAndTags() {
     MappedResults<SimpleEntry<String, String>> mappedResults =
         awsSecretsManagerExplicit.mapSecrets(
-            List.of(SECRET_NAME_PREFIX_A),
-            List.of("tagKey1"),
-            Collections.emptyList(),
-            SimpleEntry::new);
+            List.of(SECRET_NAME_PREFIX_A), Map.of("tagKey1", ""), SimpleEntry::new);
 
     final Set<String> fetchedKeys =
         mappedResults.getValues().stream().map(SimpleEntry::getKey).collect(Collectors.toSet());
@@ -254,11 +237,11 @@ class AwsSecretsManagerTest {
 
   @Test
   void listAndMapSecretsWithMatchingTagKeys() {
-    final Set<String> expectedTagKeys = Set.of("tagKey1");
+    final Map<String, String> expectedTagMap = Map.of("tagKey1", "");
 
     MappedResults<SimpleEntry<String, String>> mappedResults =
         awsSecretsManagerExplicit.mapSecrets(
-            Collections.emptyList(), expectedTagKeys, Collections.emptyList(), SimpleEntry::new);
+            Collections.emptyList(), expectedTagMap, SimpleEntry::new);
 
     final Set<String> fetchedKeys =
         mappedResults.getValues().stream().map(SimpleEntry::getKey).collect(Collectors.toSet());
@@ -267,67 +250,7 @@ class AwsSecretsManagerTest {
         secretsMaps.getAllSecretsMap().entrySet().stream()
             .collect(
                 Collectors.partitioningBy(
-                    entry -> expectedTagKeys.contains(entry.getValue().getTagKey())));
-
-    Assertions.assertThat(fetchedKeys)
-        .containsAll(
-            expectedSecrets.get(Boolean.TRUE).stream()
-                .map(Map.Entry::getKey)
-                .collect(Collectors.toSet()));
-    Assertions.assertThat(fetchedKeys)
-        .doesNotContainAnyElementsOf(
-            expectedSecrets.get(Boolean.FALSE).stream()
-                .map(Map.Entry::getKey)
-                .collect(Collectors.toSet()));
-  }
-
-  @Test
-  void listAndMapSecretsWithMatchingTagValues() {
-    final Set<String> expectedTagValues = Set.of("tagValB", "tagValC");
-
-    MappedResults<SimpleEntry<String, String>> mappedResults =
-        awsSecretsManagerExplicit.mapSecrets(
-            Collections.emptyList(), Collections.emptyList(), expectedTagValues, SimpleEntry::new);
-    final Set<String> fetchedKeys =
-        mappedResults.getValues().stream().map(SimpleEntry::getKey).collect(Collectors.toSet());
-
-    // expected tag values from both maps should have returned
-    final Map<Boolean, List<Map.Entry<String, AwsSecret>>> expectedSecrets =
-        secretsMaps.getAllSecretsMap().entrySet().stream()
-            .collect(
-                Collectors.partitioningBy(
-                    entry -> expectedTagValues.contains(entry.getValue().getTagValue())));
-
-    Assertions.assertThat(fetchedKeys)
-        .containsAll(
-            expectedSecrets.get(Boolean.TRUE).stream()
-                .map(Map.Entry::getKey)
-                .collect(Collectors.toSet()));
-    Assertions.assertThat(fetchedKeys)
-        .doesNotContainAnyElementsOf(
-            expectedSecrets.get(Boolean.FALSE).stream()
-                .map(Map.Entry::getKey)
-                .collect(Collectors.toSet()));
-  }
-
-  @Test
-  void listAndMapSecretsWithMatchingTagKeysAndValues() {
-    final Set<String> expectedTagKeys = Set.of("tagKey1");
-    final Set<String> expectedTagValues = Set.of("tagValB");
-
-    MappedResults<SimpleEntry<String, String>> mappedResults =
-        awsSecretsManagerExplicit.mapSecrets(
-            Collections.emptyList(), expectedTagKeys, expectedTagValues, SimpleEntry::new);
-    final Set<String> fetchedKeys =
-        mappedResults.getValues().stream().map(SimpleEntry::getKey).collect(Collectors.toSet());
-
-    final Map<Boolean, List<Map.Entry<String, AwsSecret>>> expectedSecrets =
-        secretsMaps.getAllSecretsMap().entrySet().stream()
-            .collect(
-                Collectors.partitioningBy(
-                    entry ->
-                        expectedTagKeys.contains(entry.getValue().getTagKey())
-                            && expectedTagValues.contains(entry.getValue().getTagValue())));
+                    entry -> expectedTagMap.containsKey(entry.getValue().getTagKey())));
 
     Assertions.assertThat(fetchedKeys)
         .containsAll(
@@ -349,8 +272,7 @@ class AwsSecretsManagerTest {
     MappedResults<SimpleEntry<String, String>> mappedResults =
         awsSecretsManagerExplicit.mapSecrets(
             Collections.emptyList(),
-            Collections.emptyList(),
-            Collections.emptyList(),
+            Map.of(),
             (name, value) -> {
               if (name.equals(expectedKey)) {
                 return null;
@@ -376,8 +298,7 @@ class AwsSecretsManagerTest {
     MappedResults<SimpleEntry<String, String>> mappedResults =
         awsSecretsManagerExplicit.mapSecrets(
             Collections.emptyList(),
-            Collections.emptyList(),
-            Collections.emptyList(),
+            Map.of(),
             (name, value) -> {
               if (name.equals(expectedKey)) {
                 throw new RuntimeException("Arbitrary Failure");
@@ -405,10 +326,7 @@ class AwsSecretsManagerTest {
   void mapSecretsWithInvalidCredentialsReturnsError() {
     MappedResults<SimpleEntry<String, String>> result =
         awsSecretsManagerInvalidCredentials.mapSecrets(
-            Collections.emptyList(),
-            Collections.emptyList(),
-            Collections.emptyList(),
-            SimpleEntry::new);
+            Collections.emptyList(), Map.of(), SimpleEntry::new);
 
     Assertions.assertThat(result.getErrorCount()).isOne();
     Assertions.assertThat(result.getValues()).isEmpty();
